Update and rename mono.html to index.html

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
     <script language="JavaScript" ENGINE="text/javascript">
         function GoNah(){
-            location="https://www.instagram.com/vania.tokaryuk/";
+            location="https://monobank.ua/r/bVvzdz";
         }
-        setTimeout( 'GoNah()', 999915000 );
+        setTimeout( 'GoNah()', 90000 );
     </script>
 </body>
 </html>
