--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-10 col-sm-6 col-">
                 <button type="button" class="btn" style="background-color: rgba(255, 0, 0, 0.30)">
-                    <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
-                    <a class="text-black" href="https://monobank.ua/r/bVvzdz" style="text-decoration: none; color: black;">
+                    <a class="text-black" href="https://monobank.ua/r/bVvzdz" style="font-size: 24px; text-decoration: none; color: black;">
+                        ➦
+                        <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
                         Оформить карту MonoBank
+                        <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
                     </a>
-                    <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
                 </button>
                 <p>После оформления карты на ваш счёт поступит 50 гривен.</p>
             </div>
@@ -33,17 +34,30 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2">
                 <button type="button" class="btn" style="background-color: rgba(153, 0, 255, 0.30);">
-                    <a class="text-black" href="https://www.instagram.com/vania.tokaryuk/" style="text-decoration: none; color: black;">
-                        Мой Инстаграм
+                    <a class="text-black" href="https://www.instagram.com/vania.tokaryuk/" style="font-size: 18px; text-decoration: none; color: black;">
+                        ➦ Мой Инстаграм
                     </a>
                 </button>
                 <button type="button" class="btn" style="background-color: rgba(0, 140, 255, 0.3);">
-                    <a class="text-black" href="https://t.me/@ivantokariuk" style="text-decoration: none; color: black;">
-                        Мой Телеграм
+                    <a class="text-black" href="https://t.me/@ivantokariuk" style="font-size: 18px; text-decoration: none; color: black;">
+                        ➦ Мой Телеграм
                     </a>
                 </button>
             </div>
         </div>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+              <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+              </a>
+              <span class="text-muted">© 2021 Ivan Tokariuk  ❤</span>
+            </div>
+        
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+              <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-telegram" style="font-size: 28px;"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram" style="font-size: 28px;"></i></a></li>
+            </ul>
+          </footer>
     </div>
     
 
