--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+    <title>MonoBank | Ivan Tokariuk</title>
 </head>
 <body>
     <div class="container">
@@ -23,7 +24,7 @@
                 <button type="button" class="btn" style="background-color: rgba(255, 0, 0, 0.30)">
                     <a class="text-black" href="https://monobank.ua/r/bVvzdz" style="font-size: 24px; text-decoration: none; color: black;">
                         ➦
-                        <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
+                        
                         Оформить карту MonoBank
                         <img width="52" height="52" src="./qr-cat-2.svg" aria-hidden="true">
                     </a>
