--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,7 +40,7 @@
                     </a>
                 </button>
                 <button type="button" class="btn" style="background-color: rgba(0, 140, 255, 0.3);">
-                    <a class="text-black" href="https://t.me/@ivantokariuk" style="font-size: 18px; text-decoration: none; color: black;">
+                    <a class="text-black" href="https://t.me/ivantokariuk/" style="font-size: 18px; text-decoration: none; color: black;">
                         ➦ Мой Телеграм
                     </a>
                 </button>
@@ -55,8 +55,8 @@
             </div>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-telegram" style="font-size: 28px;"></i></a></li>
-              <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram" style="font-size: 28px;"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://t.me/ivantokariuk/"><i class="bi bi-telegram" style="font-size: 28px;"></i></a></li>
+              <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/vania.tokaryuk/"><i class="bi bi-instagram" style="font-size: 28px;"></i></a></li>
             </ul>
           </footer>
     </div>
